--- a/package.json
+++ b/package.json
@@ -1,104 +1,66 @@
 {
-  "name": "mapshaper",
-  "version": "0.6.113",
-  "description": "A tool for editing vector datasets for mapping and GIS.",
-  "keywords": [
-    "shapefile",
-    "topojson",
-    "geojson",
-    "cartography",
-    "simplification",
-    "topology",
-    "csv",
-    "gis"
-  ],
-  "author": "Matthew Bloch <masiyou@gmail.com>",
-  "contributors": [],
-  "license": "MPL-2.0",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mbloch/mapshaper.git"
-  },
-  "engines": {
-    "node": ">=12.0.0"
-  },
-  "scripts": {
-    "test": "mocha test",
-    "build": "rollup --config",
-    "install": "rollup --config",
-    "lint": "eslint --ext mjs src/",
-    "prepublishOnly": "npm lint; npm test; ./pre-publish",
-    "postpublish": "./release_web_ui; ./release_github_version",
-    "dev": "rollup --config --watch"
-  },
-  "main": "./mapshaper.js",
-  "files": [
-    "/bin/**",
-    "/www/**",
-    "!/www/nacis/**",
-    "/mapshaper.js",
-    "!.DS_Store"
-  ],
-  "dependencies": {
-    "@placemarkio/tokml": "^0.3.3",
-    "@tmcw/togeojson": "^5.6.0",
-    "@xmldom/xmldom": "^0.8.6",
-    "adm-zip": "^0.5.9",
-    "big.js": "^7.0.1",
-    "commander": "7.0.0",
-    "cookies": "^0.8.0",
-    "d3-color": "3.1.0",
-    "d3-interpolate": "^3.0.1",
-    "d3-scale-chromatic": "3.0.0",
-    "delaunator": "^5.0.0",
-    "fflate": "0.8.2",
-    "flatbush": "^3.2.1",
-    "geographiclib-geodesic": "^2.2.0",
-    "geokdbush": "^1.1.0",
-    "iconv-lite": "^0.6.3",
-    "idb-keyval": "^6.2.0",
-    "kdbush": "^3.0.0",
-    "mproj": "0.0.40",
-    "msgpackr": "^1.10.1",
-    "opn": "^5.3.0",
-    "rw": "~1.3.3",
-    "sync-request": "6.1.0",
-    "tinyqueue": "^2.0.3"
-  },
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^28.0.6",
-    "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^16.0.1",
-    "csv-spectrum": "^1.0.0",
-    "eslint": "^8.16.0",
-    "mocha": "^10.2.0",
-    "rollup": "^4.44.1",
-    "rollup-plugin-polyfill-node": "^0.13.0",
-    "shell-quote": "^1.7.4",
-    "underscore": "^1.13.1"
-  },
-  "mocha": {
-    "reporter": "dot",
-    "node-option": [
-      "experimental-loader=./test/_loader.js"
-    ],
-    "check-leaks": true,
-    "parallel": true,
-    "jobs": 4
-  },
-  "bin": {
-    "mapshaper": "bin/mapshaper",
-    "mapshaper-gui": "bin/mapshaper-gui",
-    "mapshaper-xl": "bin/mapshaper-xl"
-  },
-  "bugs": {
-    "url": "https://github.com/mbloch/mapshaper/issues"
-  },
-  "homepage": "https://github.com/mbloch/mapshaper#readme",
-  "directories": {
-    "test": "test"
-  },
-  "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "^4.44.1"
-  }
+	"name": "mapshaper",
+	"version": "0.5.46",
+	"description": "A tool for editing vector datasets for mapping and GIS.",
+	"keywords": [
+		"shapefile",
+		"topojson",
+		"geojson",
+		"cartography",
+		"simplification",
+		"topology",
+		"gis"
+	],
+	"author": "Matthew Bloch <masiyou@gmail.com>",
+	"contributors": [],
+	"license": "MPL-2.0",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/mbloch/mapshaper"
+	},
+	"engines": {
+		"node": ">=6.0.0"
+	},
+	"scripts": {
+		"test": "mocha -r esm --parallel --jobs 4 --check-leaks -R dot",
+		"build": "rollup --config",
+		"prepublishOnly": "npm test",
+		"postpublish": "./release",
+		"browserify": "browserify -r sync-request -r mproj -r buffer -r iconv-lite -r fs -r flatbush -r rw -r path -r d3-scale-chromatic -r d3-color -r d3-interpolate -o www/modules.js",
+		"watch": "rollup --config --watch"
+	},
+	"main": "./mapshaper.js",
+	"files": [
+		"/bin/**",
+		"/www/**",
+		"!/www/nacis/",
+		"/mapshaper.js",
+		"!.DS_Store"
+	],
+	"dependencies": {
+		"commander": "^5.1.0",
+		"cookies": "^0.8.0",
+		"d3-scale-chromatic": "^2.0.0",
+		"flatbush": "^3.2.1",
+		"iconv-lite": "0.4.24",
+		"mproj": "0.0.27",
+		"opn": "^5.3.0",
+		"rw": "~1.3.3",
+		"sync-request": "5.0.0"
+	},
+	"devDependencies": {
+		"browserify": "^16.5.0",
+		"csv-spectrum": "^1.0.0",
+		"deep-eql": ">=0.1.3",
+		"esm": "^3.2.25",
+		"mocha": "^8.3.0",
+		"rollup": "^2.28.2",
+		"shell-quote": "^1.6.1",
+		"underscore": "^1.9.0"
+	},
+	"bin": {
+		"mapshaper": "./bin/mapshaper",
+		"mapshaper-gui": "./bin/mapshaper-gui",
+		"mapshaper-xl": "./bin/mapshaper-xl"
+	}
 }
