--- a/package.json
+++ b/package.json
@@ -39,41 +39,42 @@
 	],
 	"dependencies": {
 		"@placemarkio/tokml": "^0.3.3",
-    "@tmcw/togeojson": "^5.6.0",
-    "@xmldom/xmldom": "^0.8.6",
-    "adm-zip": "^0.5.9",
-    "big.js": "^7.0.1",
-    "commander": "7.0.0",
-    "cookies": "^0.8.0",
-    "d3-color": "3.1.0",
-    "d3-interpolate": "^3.0.1",
-    "d3-scale-chromatic": "3.0.0",
-    "delaunator": "^5.0.0",
-    "fflate": "0.8.2",
-    "flatbush": "^3.2.1",
-    "geographiclib-geodesic": "^2.2.0",
-    "geokdbush": "^1.1.0",
-    "iconv-lite": "^0.6.3",
-    "idb-keyval": "^6.2.0",
-    "kdbush": "^3.0.0",
-    "mproj": "0.0.40",
-    "msgpackr": "^1.10.1",
-    "opn": "^5.3.0",
-    "rw": "~1.3.3",
-    "sync-request": "6.1.0",
-    "tinyqueue": "^2.0.3"
+		"@tmcw/togeojson": "^5.6.0",
+		"@xmldom/xmldom": "^0.8.6",
+		"adm-zip": "^0.5.9",
+		"big.js": "^7.0.1",
+		"commander": "7.0.0",
+		"cookies": "^0.8.0",
+		"d3-color": "3.1.0",
+		"d3-interpolate": "^3.0.1",
+		"d3-scale-chromatic": "3.0.0",
+		"delaunator": "^5.0.0",
+		"fflate": "0.8.2",
+		"flatbush": "^3.2.1",
+		"geographiclib-geodesic": "^2.2.0",
+		"geokdbush": "^1.1.0",
+		"iconv-lite": "^0.6.3",
+		"idb-keyval": "^6.2.0",
+		"kdbush": "^3.0.0",
+		"mproj": "0.0.40",
+		"msgpackr": "^1.10.1",
+		"opn": "^5.3.0",
+		"partial-json": "^0.1.7",
+		"rw": "~1.3.3",
+		"sync-request": "6.1.0",
+		"tinyqueue": "^2.0.3"
 	},
 	"devDependencies": {
 		"@rollup/plugin-commonjs": "^28.0.6",
-    "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^16.0.1",
-    "csv-spectrum": "^1.0.0",
-    "eslint": "^8.16.0",
-    "mocha": "^10.2.0",
-    "rollup": "^4.44.1",
-    "rollup-plugin-polyfill-node": "^0.13.0",
-    "shell-quote": "^1.7.4",
-    "underscore": "^1.13.1"
+		"@rollup/plugin-json": "^6.1.0",
+		"@rollup/plugin-node-resolve": "^16.0.1",
+		"csv-spectrum": "^1.0.0",
+		"eslint": "^8.16.0",
+		"mocha": "^10.2.0",
+		"rollup": "^4.44.1",
+		"rollup-plugin-polyfill-node": "^0.13.0",
+		"shell-quote": "^1.7.4",
+		"underscore": "^1.13.1"
 	},
 	"bin": {
 		"mapshaper": "./bin/mapshaper",
